fix: remove overflow auto to get rid of scrollbar in body (#849)

--- a/src/shell-styles.scss
+++ b/src/shell-styles.scss
@@ -11,7 +11,6 @@
 @import 'node_modules/primeicons/primeicons.css';
 
 .onecx-body {
-  overflow: auto;
   display: flex;
   flex-direction: column;
   height: 100%;
